# mieet_app

./: Dockerfile  db.sqlite3  manage.py  pyproject.toml
mieet_app/: settings.py  urls.py  wsgi.py
mieet_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quotes/: .models.py.swp  .telegram_bot.py.swp  admin.py  api.py  models.py  serializers.py  telegram_bot.py  urls.py
quotes/management/commands/: start_bot.py
quotes/migrations/: 0001_initial.py  0002_auto_20190902_2058.py  0003_auto_20190902_2059.py  0004_auto_20190903_2053.py
